--- a/Ubiquitous2/app.config
+++ b/Ubiquitous2/app.config
@@ -25,6 +25,9 @@
       <setting name="MainWindowWidth" serializeAs="String">
         <value>400</value>
       </setting>
+      <setting name="WebServerPort" serializeAs="String">
+        <value>8080</value>
+      </setting>
     </UB.Properties.Ubiqiutous>
     <UB.Properties.Settings>
       <setting name="LoremIpsum" serializeAs="String">
