--- a/Ubiquitous2/Properties/Ubiquitous.settings
+++ b/Ubiquitous2/Properties/Ubiquitous.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="UB.Properties" GeneratedClassName="Ubiqiutous">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="UB.Properties" GeneratedClassName="Ubiquitous">
   <Profiles />
   <Settings>
     <Setting Name="LoremIpsum" Provider="PortableSettingsProvider" Type="System.String" Scope="User">
