--- a/Ubiquitous2/Ubiquitous2.csproj
+++ b/Ubiquitous2/Ubiquitous2.csproj
@@ -196,11 +196,13 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Ubiquitous.settings</DependentUpon>
     </Compile>
+    <Compile Include="Utils\Collections.cs" />
     <Compile Include="Utils\Config.cs" />
     <Compile Include="Utils\Html.cs" />
     <Compile Include="Utils\Json.cs" />
     <Compile Include="Utils\Net.cs" />
     <Compile Include="Utils\Time.cs" />
+    <Compile Include="Utils\UI.cs" />
     <Compile Include="ViewModel\ChatStatusItemViewModel.cs" />
     <Compile Include="ViewModel\StatusViewModel.cs" />
     <Compile Include="View\ChatStatusItemView.xaml.cs">
