--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -5,5 +5,6 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
   <package id="WpfAnimatedGif" version="1.4.4" targetFramework="net45" />
 </packages>
