--- a/Ubiquitous2/Ubiquitous2.csproj
+++ b/Ubiquitous2/Ubiquitous2.csproj
@@ -305,6 +305,7 @@
     <Compile Include="Utils\Collections.cs" />
     <Compile Include="Utils\Config.cs" />
     <Compile Include="Utils\Html.cs" />
+    <Compile Include="Utils\Image.cs" />
     <Compile Include="Utils\Json.cs" />
     <Compile Include="Utils\Net.cs" />
     <Compile Include="Utils\Time.cs" />
