--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -7,4 +7,5 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
   <package id="WpfAnimatedGif" version="1.4.4" targetFramework="net45" />
+  <package id="WriteableBitmapEx" version="1.0.12.0" targetFramework="net45" />
 </packages>
