--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -6,6 +6,6 @@
   <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
-  <package id="WpfAnimatedGif" version="1.4.4" targetFramework="net45" />
+  <package id="WpfAnimatedGif" version="1.5.0-beta" targetFramework="net45" />
   <package id="WriteableBitmapEx" version="1.0.12.0" targetFramework="net45" />
 </packages>
