--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="MvvmLight" version="4.2.32.7" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.4.32.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
